AccountService: add getPieChartData(for all types accounts) method CoinService & StockService: add freeUSD to PiePriceData